2011-09-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Bump to bring in latest
	GConf->GIO fix for proxy detection.
	(JDK_SHA256SUM): Likewise.
	(ICEDTEA_ENV): Set USE_SYSTEM_CUPS, CUPS_LIBS,
	CUPS_CFLAGS, USE_SYSTEM_GTK, GTK_LIBS, GTK_CFLAGS,
	USE_SYSTEM_GIO, GIO_LIBS, GIO_CFLAGS, USE_SYSTEM_FONTCONFIG,
	FONTCONFIG_LIBS, FONTCONFIG_CFLAGS.
	* acinclude.m4,
	(IT_CHECK_FOR_GTK): Add --enable-system-gtk and detect
	Gtk+ if enabled.
	(IT_CHECK_FOR_GIO): Likewise for --enable-system-gio.
	(IT_CHECK_FOR_FONTCONFIG): Likewise for --enable-system-fontconfig.
	(IT_CHECK_FOR_CUPS): Detect both CUPS headers and libraries,
	and set CUPS_LIBS.
	* configure.ac: Remove old CUPS detection.
	Add calls to IT_CHECK_FOR_GTK, IT_CHECK_FOR_GIO,
	IT_CHECK_FOR_FONTCONFIG and IT_CHECK_FOR_CUPS.

2011-09-09  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Bring in fix for another
	duplicate gboolean definition.
	(JDK_SHA256SUM): Likewise.

2011-09-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Bring in fix for duplicate
	gboolean definition.
	(JDK_SHA256SUM): Likewise.

2011-09-06  Andrew John Hughes  <ahughes@redhat.com>

	* patches/hotspot-gcc-pr36917.patch:
	Redundant, was removed from IcedTea6.
	* patches/libraries.patch,
	* patches/linker-libs-order.patch,
	* patches/pr261.patch:
	Updated and recreated in the IcedTea7 forest.
	* Makefile.am:
	(JDK_CHANGESET): Updated.
	(JDK_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Remove above.
	(ICEDTEA_ENV): Set ZLIB_LIBS, ZLIB_CFLAGS,
	USE_SYSTEM_ZLIB, JPEG_LIBS, JPEG_CFLAGS,
	USE_SYSTEM_JPEG, PNG_LIBS, PNG_CFLAGS,
	USE_SYSTEM_PNG, GIF_LIBS, GIF_CFLAGS,
	USE_SYSTEM_GIF.
	* NEWS: Mention new system library provision
	and cleanup ordering.  Mention fix for PR770.
	* acinclude.m4:
	(IT_CHECK_FOR_ZLIB): New macro to check for zlib.
	(IT_CHECK_FOR_JPEG): Likewise for libjpeg.
	(IT_CHECK_FOR_PNG): Likewise for libpng.
	(IT_CHECK_FOR_GIF): Likewise for giflib.