@@ -570,6 +570,11 @@ ICEDTEA_ENV += \
 	FONTCONFIG_CFLAGS="${FONTCONFIG_CFLAGS}"
 endif
 
+if USE_SYSCALL_COMPILATION
+ICEDTEA_ENV += \
+	COMPILE_AGAINST_SYSCALLS="true"
+endif
+
 # OpenJDK boot build environment.
 ICEDTEA_ENV_BOOT = $(ICEDTEA_ENV) \
 	BOOTCLASSPATH_CLS_RT="-bootclasspath $(CLS_DIR_BOOT):$(RUNTIME)" \
